--- a/main.html
+++ b/main.html
@@ -1,30 +1,24 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Styled Page with Pseudo-Classes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<div>
-	<p>First paragraph</p>
-	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae consequatur dicta maxime dolore sint optio</p>
-	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae consequatur dicta maxime dolore sint optio</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae consequatur dicta maxime dolore sint optio</p>
-	</div>
-	
-		<ul>
-			<li>First Item</li>
-			<li>Second Item</li>
-			<li>Third Item</li>
-			<li>Fourth Item</li>
-			<li>Fifth Item</li>
-		</ul>
-		<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <article>
+        <p>This is the first paragraph with white text on a black background.</p>
+        <p>This is the second paragraph with standard text color.</p>
+        <p>This is the third paragraph with red text.</p>
+    </article>
 
+    <ul>
+        <li>List item 1</li>
+        <li>List item 2</li>
+        <li>List item 3</li>
+        <li>List item 4</li>
+        <li>List item 5</li>
+    </ul>
 </body>
-
 </html>
